// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extensions.enabled.itx (provider=cockroachdb) extended client in itx can rollback via custom call 1`] = `
Error caused by an extension: 
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.itx (provider=cockroachdb) extended client in itx can rollback via normal call 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/extensions/enabled/itx.ts:0:0

  XX   },
  XX })
  XX 
→ XX const userB = await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.itx (provider=mongodb) extended client in itx can rollback via custom call 1`] = `
Error caused by an extension: 
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.enabled.itx (provider=mongodb) extended client in itx can rollback via normal call 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/extensions/enabled/itx.ts:0:0

  XX   },
  XX })
  XX 
→ XX const userB = await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.enabled.itx (provider=mysql) extended client in itx can rollback via custom call 1`] = `
Error caused by an extension: 
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.enabled.itx (provider=mysql) extended client in itx can rollback via normal call 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/extensions/enabled/itx.ts:0:0

  XX   },
  XX })
  XX 
→ XX const userB = await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`extensions.enabled.itx (provider=postgresql) extended client in itx can rollback via custom call 1`] = `

Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.itx (provider=postgresql) extended client in itx can rollback via normal call 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/extensions/enabled/itx.ts:0:0

  XX   },
  XX })
  XX 
→ XX const userB = await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.itx (provider=sqlite) extended client in itx can rollback via custom call 1`] = `
Error caused by an extension: 
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.itx (provider=sqlite) extended client in itx can rollback via normal call 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/extensions/enabled/itx.ts:0:0

  XX   },
  XX })
  XX 
→ XX const userB = await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`extensions.enabled.itx (provider=sqlserver) extended client in itx can rollback via custom call 1`] = `
Error caused by an extension: 
Invalid \`prisma.user.create()\` invocation:


Unique constraint failed on the constraint: \`dbo.User\`
`;

exports[`extensions.enabled.itx (provider=sqlserver) extended client in itx can rollback via normal call 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/extensions/enabled/itx.ts:0:0

  XX   },
  XX })
  XX 
→ XX const userB = await tx.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;
